  (Stephen Dolan, review by Xavier Leroy)

### Standard library:

- #11410: Add Set.to_list, Map.to_list, Map.of_list, Map.add_to_list,
  (Daniel Bünzli, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #11128: Add In_channel.isatty, Out_channel.isatty.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Florian Angeletti)

- #10789: Add `Stack.drop`
  (Léo Andrès, review by Gabriel Scherer)

* #10899: Change Stdlib.nan from signaling NaN to quiet NaN.
  (Greta Yorsh, review by Xavier Leroy, Guillaume Melquiond and
  Gabriel Scherer)

- #11354: Hashtbl.find_all is now tail-recursive.
  (Fermín Reig, review by Gabriel Scherer)

- #11500: Make Hashtbl.mem non-allocating.
  (Simmo Saan, review by Nicolás Ojeda Bär)

- #11362: Rewrite List.map, List.mapi and List.map2 using TRMC, making them
  faster as well as tail-recursive.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #11412: Add Sys.is_regular_file
  (Xavier Leroy, review by Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

- #11402: Rewrite List.init, List.filter, List.filteri, List.filter_map and
  List.of_seq using TRMC instead of an accumulator, making them faster and
  halving memory usage while remaining tail-recursive.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

- #11476: Add examples in documentation of Hashtbl, Queue, Atomic, Format
  (Simon Cruanes, review by Yotam Barnoy, Gabriel Scherer, Daniel Bünzli,
   Ulugbek Abdullaev, and Nicolás Ojeda Bär)

### Other libraries:

- #11475: Make Unix terminal interface bindings domain-safe
  (Olivier Nicole and Xavier Leroy, review by Xavier Leroy)

### Tools:

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11166: ocamllex: the union of two character sets "cset1 | cset2" can now be
  used in any context where a character set is expected.
  (Nicolás Ojeda Bär, Martin Jambon, review by Sébastien Hinderer)
